# desafio-serasa

./: Makefile
.github/workflows/: python-package.yml
order-api/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
order-api/app/: config.py  controllers.py  dependencies.py  examples.py  main.py  models.py  schemas.py  services.py
user-api/: .dockerignore  Makefile  README.md  docker-compose.yml  pyproject.toml
user-api/alembic/: env.py
user-api/alembic/versions/: 1559520aaa68_create_users_table.py
user-api/app/: config.py  controller.py  controllers.py  dependencies.py  examples.py  exceptions.py  main.py  model.py  models.py  schemas.py  services.py
user-api/app/db/: base.py  session.py
user-api/app/healthchecks/: controllers.py
user-api/app/users/: controllers.py  exceptions.py  models.py  schemas.py  services.py  users.py
user-api/docs/erds/: users_erd.png.png:Zone.Identifier
user-api/docs/sequence_diagrams/: Create User.png:Zone.Identifier  Delete User.png:Zone.Identifier  Detail User.png:Zone.Identifier  List Users.png:Zone.Identifier  Update User.png:Zone.Identifier
user-api/scripts/: load_api.py
user-api/tests/: conftest.py  factories.py  test_controller.py
user-api/tests/integration/: conftest.py  test_controller.py  test_integration_controllers.py
user-api/tests/unit/: test_controller.py  test_controllers.py  test_dependencies.py
user-api/tests/unit/healthchecks/: test_controllers.py
user-api/tests/unit/users/: test_controllers.py  test_schemas.py
user-api/wiremock/mappings/: order_api.json
(+29 files in other folders)
